load-tests/file_server/deployment/deployment-patch.yaml
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: no-name
spec:
  template:
    metadata:
      labels:
        logs: "true"
