load-tests/file_server/deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: file-server
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: bal.perf.test
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: file-server-svc
                port:
                  number: 9100
